src/main.output
Terminals unused in grammar

    T_STRING
    BOOL
    BEFORE_COMMA
    BIGGEST


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: statement
    3           | statements statement

    4 statement: SEMICOLON
    5          | matched_stmt
    6          | unmatched_stmt

    7 matched_stmt: function
    8             | struct_decl
    9             | while_stmt
   10             | for_stmt
   11             | RETURN_stmt SEMICOLON
   12             | declaration SEMICOLON
   13             | printf_stmt SEMICOLON
   14             | scanf_stmt SEMICOLON
   15             | expr_stmt SEMICOLON
   16             | matched_if_stmt

   17 unmatched_stmt: unmatched_if_stmt

   18 function: T IDENTIFIER LPAREN params RPAREN LBRACE statements RBRACE
   19         | T IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE

   20 params: T IDENTIFIER
   21       | T IDENTIFIER EQ_ASSIGN CONST
   22       | params COMMA params

   23 struct_decl: STRUCT IDENTIFIER LBRACE members RBRACE SEMICOLON
   24            | STRUCT IDENTIFIER LBRACE members RBRACE IDENTIFIER_list SEMICOLON

   25 members: T no_init_id_list SEMICOLON
   26        | members T no_init_id_list SEMICOLON

   27 no_init_id_list: MULT IDENTIFIER
   28                | IDENTIFIER
   29                | ARRAY
   30                | no_init_id_list COMMA no_init_id_list

   31 IDENTIFIER_list: IDENTIFIER
   32                | IDENTIFIER_list COMMA IDENTIFIER_list

   33 ARRAY: IDENTIFIER LBRACKET CONST RBRACKET
   34      | ARRAY LBRACKET CONST RBRACKET

   35 ASSIGN_stmt: expr LOP_ASSIGN expr
   36            | expr EQ_ASSIGN expr

   37 RETURN_stmt: RETURN expr

   38 declaration: T declare_id_list
   39            | the_CONST T must_init_declare_id_list

   40 declare_id_list: ASSIGN_stmt
   41                | MULT IDENTIFIER
   42                | IDENTIFIER
   43                | ARRAY
   44                | declare_id_list COMMA declare_id_list

   45 must_init_declare_id_list: ASSIGN_stmt
   46                          | must_init_declare_id_list COMMA must_init_declare_id_list

   47 while_stmt: WHILE LPAREN expr RPAREN statement
   48           | WHILE LPAREN expr RPAREN LBRACE statements RBRACE

   49 for_stmt: FOR LPAREN ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN statement
   50         | FOR LPAREN declaration SEMICOLON expr SEMICOLON expr RPAREN statement
   51         | FOR LPAREN ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE
   52         | FOR LPAREN declaration SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE
   53         | FOR LPAREN SEMICOLON expr SEMICOLON expr RPAREN statement
   54         | FOR LPAREN SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE

   55 matched_if_stmt: IF LPAREN expr RPAREN matched_stmt ELSE matched_stmt
   56                | IF LPAREN expr RPAREN LBRACE statements RBRACE ELSE matched_stmt
   57                | IF LPAREN expr RPAREN matched_stmt ELSE LBRACE statements RBRACE
   58                | IF LPAREN expr RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

   59 unmatched_if_stmt: IF LPAREN expr RPAREN matched_stmt ELSE unmatched_stmt
   60                  | IF LPAREN expr RPAREN LBRACE statements RBRACE ELSE unmatched_stmt
   61                  | IF LPAREN expr RPAREN statement
   62                  | IF LPAREN expr RPAREN LBRACE statements RBRACE

   63 printf_stmt: PRINTF LPAREN expr_list RPAREN
   64            | PRINTF LPAREN STRING COMMA expr_list RPAREN

   65 scanf_stmt: SCANF LPAREN STRING COMMA scanf_id_list RPAREN

   66 expr_stmt: expr
   67          | ASSIGN_stmt
   68          | expr_stmt COMMA expr_stmt

   69 expr: expr MOD expr
   70     | expr PLUS expr
   71     | expr MINUS expr
   72     | expr MULT expr
   73     | expr DIV expr
   74     | expr AND expr
   75     | expr OR expr
   76     | expr RELOP expr
   77     | expr DOT IDENTIFIER
   78     | expr ARROW IDENTIFIER
   79     | expr LBRACKET expr RBRACKET
   80     | expr LPAREN RPAREN
   81     | expr LPAREN expr_list RPAREN
   82     | DPLUS expr
   83     | expr DPLUS
   84     | DMINUS expr
   85     | expr DMINUS
   86     | NOT expr
   87     | MINUS expr
   88     | LPAREN expr_stmt RPAREN
   89     | term

   90 term: IDENTIFIER
   91     | CONST

   92 CONST: INTEGER
   93      | CHAR
   94      | STRING
   95      | TRUE
   96      | FALSE

   97 expr_list: expr
   98          | expr_list COMMA expr_list

   99 scanf_id_list: IDENTIFIER
  100              | POS IDENTIFIER
  101              | scanf_id_list COMMA scanf_id_list

  102 T: T_INT
  103  | T_CHAR
  104  | T_BOOL
  105  | VOID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_CHAR (258) 103
    T_INT (259) 102
    T_STRING (260)
    T_BOOL (261) 104
    VOID (262) 105
    LOP_ASSIGN (263) 35
    WHILE (264) 47 48
    FOR (265) 49 50 51 52 53 54
    IF (266) 55 56 57 58 59 60 61 62
    ELSE (267) 55 56 57 58 59 60
    RETURN (268) 37
    PRINTF (269) 63 64
    SCANF (270) 65
    TRUE (271) 95
    FALSE (272) 96
    STRUCT (273) 23 24
    the_CONST (274) 39
    LPAREN (275) 18 19 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 80 81 88
    RPAREN (276) 18 19 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 80 81 88
    LBRACE (277) 18 19 23 24 48 51 52 54 56 57 58 60 62
    RBRACE (278) 18 19 23 24 48 51 52 54 56 57 58 60 62
    COMMA (279) 22 30 32 44 46 64 65 68 98 101
    POS (280) 100
    LBRACKET (281) 33 34 79
    RBRACKET (282) 33 34 79
    MOD (283) 69
    PLUS (284) 70
    MINUS (285) 71 87
    MULT (286) 27 41 72
    DIV (287) 73
    AND (288) 74
    OR (289) 75
    NOT (290) 86
    DMINUS (291) 84 85
    DPLUS (292) 82 83
    RELOP (293) 76
    DOT (294) 77
    ARROW (295) 78
    IDENTIFIER (296) 18 19 20 21 23 24 27 28 31 33 41 42 77 78 90 99 100
    INTEGER (297) 92
    CHAR (298) 93
    BOOL (299)
    STRING (300) 64 65 94
    SEMICOLON (301) 4 11 12 13 14 15 23 24 25 26 49 50 51 52 53 54
    IFX (302)
    AFTER_COMMA (303)
    BEFORE_COMMA (304)
    EQ_ASSIGN (305) 21 36
    UDMINUS (306)
    UDPLUS (307)
    UMINUS (308)
    POINTER (309)
    FXL (310)
    BIGGEST (311)


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    program (58)
        on left: 1
        on right: 0
    statements (59)
        on left: 2 3
        on right: 1 3 18 19 48 51 52 54 56 57 58 60 62
    statement (60)
        on left: 4 5 6
        on right: 2 3 47 49 50 53 61
    matched_stmt (61)
        on left: 7 8 9 10 11 12 13 14 15 16
        on right: 5 55 56 57 59
    unmatched_stmt (62)
        on left: 17
        on right: 6 59 60
    function (63)
        on left: 18 19
        on right: 7
    params (64)
        on left: 20 21 22
        on right: 18 22
    struct_decl (65)
        on left: 23 24
        on right: 8
    members (66)
        on left: 25 26
        on right: 23 24 26
    no_init_id_list (67)
        on left: 27 28 29 30
        on right: 25 26 30
    IDENTIFIER_list (68)
        on left: 31 32
        on right: 24 32
    ARRAY (69)
        on left: 33 34
        on right: 29 34 43
    ASSIGN_stmt (70)
        on left: 35 36
        on right: 40 45 49 51 67
    RETURN_stmt (71)
        on left: 37
        on right: 11
    declaration (72)
        on left: 38 39
        on right: 12 50 52
    declare_id_list (73)
        on left: 40 41 42 43 44
        on right: 38 44
    must_init_declare_id_list (74)
        on left: 45 46
        on right: 39 46
    while_stmt (75)
        on left: 47 48
        on right: 9
    for_stmt (76)
        on left: 49 50 51 52 53 54
        on right: 10
    matched_if_stmt (77)
        on left: 55 56 57 58
        on right: 16
    unmatched_if_stmt (78)
        on left: 59 60 61 62
        on right: 17
    printf_stmt (79)
        on left: 63 64
        on right: 13
    scanf_stmt (80)
        on left: 65
        on right: 14
    expr_stmt (81)
        on left: 66 67 68
        on right: 15 68 88
    expr (82)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 35 36 37 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 66 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 97
    term (83)
        on left: 90 91
        on right: 89
    CONST (84)
        on left: 92 93 94 95 96
        on right: 21 33 34 91
    expr_list (85)
        on left: 97 98
        on right: 63 64 81 98
    scanf_id_list (86)
        on left: 99 100 101
        on right: 65 101
    T (87)
        on left: 102 103 104 105
        on right: 18 19 20 21 25 26 38 39


State 0

    0 $accept: . program $end

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    VOID        shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    IF          shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINTF      shift, and go to state 9
    SCANF       shift, and go to state 10
    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    STRUCT      shift, and go to state 13
    the_CONST   shift, and go to state 14
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23
    SEMICOLON   shift, and go to state 24

    program            go to state 25
    statements         go to state 26
    statement          go to state 27
    matched_stmt       go to state 28
    unmatched_stmt     go to state 29
    function           go to state 30
    struct_decl        go to state 31
    ASSIGN_stmt        go to state 32
    RETURN_stmt        go to state 33
    declaration        go to state 34
    while_stmt         go to state 35
    for_stmt           go to state 36
    matched_if_stmt    go to state 37
    unmatched_if_stmt  go to state 38
    printf_stmt        go to state 39
    scanf_stmt         go to state 40
    expr_stmt          go to state 41
    expr               go to state 42
    term               go to state 43
    CONST              go to state 44
    T                  go to state 45


State 1

  103 T: T_CHAR .

    $default  reduce using rule 103 (T)


State 2

  102 T: T_INT .

    $default  reduce using rule 102 (T)


State 3

  104 T: T_BOOL .

    $default  reduce using rule 104 (T)


State 4

  105 T: VOID .

    $default  reduce using rule 105 (T)


State 5

   47 while_stmt: WHILE . LPAREN expr RPAREN statement
   48           | WHILE . LPAREN expr RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 46


State 6

   49 for_stmt: FOR . LPAREN ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN statement
   50         | FOR . LPAREN declaration SEMICOLON expr SEMICOLON expr RPAREN statement
   51         | FOR . LPAREN ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE
   52         | FOR . LPAREN declaration SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE
   53         | FOR . LPAREN SEMICOLON expr SEMICOLON expr RPAREN statement
   54         | FOR . LPAREN SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 47


State 7

   55 matched_if_stmt: IF . LPAREN expr RPAREN matched_stmt ELSE matched_stmt
   56                | IF . LPAREN expr RPAREN LBRACE statements RBRACE ELSE matched_stmt
   57                | IF . LPAREN expr RPAREN matched_stmt ELSE LBRACE statements RBRACE
   58                | IF . LPAREN expr RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
   59 unmatched_if_stmt: IF . LPAREN expr RPAREN matched_stmt ELSE unmatched_stmt
   60                  | IF . LPAREN expr RPAREN LBRACE statements RBRACE ELSE unmatched_stmt
   61                  | IF . LPAREN expr RPAREN statement
   62                  | IF . LPAREN expr RPAREN LBRACE statements RBRACE

    LPAREN  shift, and go to state 48


State 8

   37 RETURN_stmt: RETURN . expr

    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23

    expr   go to state 49
    term   go to state 43
    CONST  go to state 44


State 9

   63 printf_stmt: PRINTF . LPAREN expr_list RPAREN
   64            | PRINTF . LPAREN STRING COMMA expr_list RPAREN

    LPAREN  shift, and go to state 50


State 10

   65 scanf_stmt: SCANF . LPAREN STRING COMMA scanf_id_list RPAREN

    LPAREN  shift, and go to state 51


State 11

   95 CONST: TRUE .

    $default  reduce using rule 95 (CONST)


State 12

   96 CONST: FALSE .

    $default  reduce using rule 96 (CONST)


State 13

   23 struct_decl: STRUCT . IDENTIFIER LBRACE members RBRACE SEMICOLON
   24            | STRUCT . IDENTIFIER LBRACE members RBRACE IDENTIFIER_list SEMICOLON

    IDENTIFIER  shift, and go to state 52


State 14

   39 declaration: the_CONST . T must_init_declare_id_list

    T_CHAR  shift, and go to state 1
    T_INT   shift, and go to state 2
    T_BOOL  shift, and go to state 3
    VOID    shift, and go to state 4

    T  go to state 53


State 15

   88 expr: LPAREN . expr_stmt RPAREN

    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23

    ASSIGN_stmt  go to state 32
    expr_stmt    go to state 54
    expr         go to state 42
    term         go to state 43
    CONST        go to state 44


State 16

   87 expr: MINUS . expr

    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23

    expr   go to state 55
    term   go to state 43
    CONST  go to state 44


State 17

   86 expr: NOT . expr

    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23

    expr   go to state 56
    term   go to state 43
    CONST  go to state 44


State 18

   84 expr: DMINUS . expr

    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23

    expr   go to state 57
    term   go to state 43
    CONST  go to state 44


State 19

   82 expr: DPLUS . expr

    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23

    expr   go to state 58
    term   go to state 43
    CONST  go to state 44


State 20

   90 term: IDENTIFIER .

    $default  reduce using rule 90 (term)


State 21

   92 CONST: INTEGER .

    $default  reduce using rule 92 (CONST)


State 22

   93 CONST: CHAR .

    $default  reduce using rule 93 (CONST)


State 23

   94 CONST: STRING .

    $default  reduce using rule 94 (CONST)


State 24

    4 statement: SEMICOLON .

    $default  reduce using rule 4 (statement)


State 25

    0 $accept: program . $end

    $end  shift, and go to state 59


State 26

    1 program: statements .
    3 statements: statements . statement

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    VOID        shift, and go to state 4
    WHILE       shift, and go to state 5
    FOR         shift, and go to state 6
    IF          shift, and go to state 7
    RETURN      shift, and go to state 8
    PRINTF      shift, and go to state 9
    SCANF       shift, and go to state 10
    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    STRUCT      shift, and go to state 13
    the_CONST   shift, and go to state 14
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23
    SEMICOLON   shift, and go to state 24

    $default  reduce using rule 1 (program)

    statement          go to state 60
    matched_stmt       go to state 28
    unmatched_stmt     go to state 29
    function           go to state 30
    struct_decl        go to state 31
    ASSIGN_stmt        go to state 32
    RETURN_stmt        go to state 33
    declaration        go to state 34
    while_stmt         go to state 35
    for_stmt           go to state 36
    matched_if_stmt    go to state 37
    unmatched_if_stmt  go to state 38
    printf_stmt        go to state 39
    scanf_stmt         go to state 40
    expr_stmt          go to state 41
    expr               go to state 42
    term               go to state 43
    CONST              go to state 44
    T                  go to state 45


State 27

    2 statements: statement .

    $default  reduce using rule 2 (statements)


State 28

    5 statement: matched_stmt .

    $default  reduce using rule 5 (statement)


State 29

    6 statement: unmatched_stmt .

    $default  reduce using rule 6 (statement)


State 30

    7 matched_stmt: function .

    $default  reduce using rule 7 (matched_stmt)


State 31

    8 matched_stmt: struct_decl .

    $default  reduce using rule 8 (matched_stmt)


State 32

   67 expr_stmt: ASSIGN_stmt .

    $default  reduce using rule 67 (expr_stmt)


State 33

   11 matched_stmt: RETURN_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 61


State 34

   12 matched_stmt: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 62


State 35

    9 matched_stmt: while_stmt .

    $default  reduce using rule 9 (matched_stmt)


State 36

   10 matched_stmt: for_stmt .

    $default  reduce using rule 10 (matched_stmt)


State 37

   16 matched_stmt: matched_if_stmt .

    $default  reduce using rule 16 (matched_stmt)


State 38

   17 unmatched_stmt: unmatched_if_stmt .

    $default  reduce using rule 17 (unmatched_stmt)


State 39

   13 matched_stmt: printf_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 63


State 40

   14 matched_stmt: scanf_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 64


State 41

   15 matched_stmt: expr_stmt . SEMICOLON
   68 expr_stmt: expr_stmt . COMMA expr_stmt

    COMMA      shift, and go to state 65
    SEMICOLON  shift, and go to state 66


State 42

   35 ASSIGN_stmt: expr . LOP_ASSIGN expr
   36            | expr . EQ_ASSIGN expr
   66 expr_stmt: expr .
   69 expr: expr . MOD expr
   70     | expr . PLUS expr
   71     | expr . MINUS expr
   72     | expr . MULT expr
   73     | expr . DIV expr
   74     | expr . AND expr
   75     | expr . OR expr
   76     | expr . RELOP expr
   77     | expr . DOT IDENTIFIER
   78     | expr . ARROW IDENTIFIER
   79     | expr . LBRACKET expr RBRACKET
   80     | expr . LPAREN RPAREN
   81     | expr . LPAREN expr_list RPAREN
   83     | expr . DPLUS
   85     | expr . DMINUS

    LOP_ASSIGN  shift, and go to state 67
    LPAREN      shift, and go to state 68
    LBRACKET    shift, and go to state 69
    MOD         shift, and go to state 70
    PLUS        shift, and go to state 71
    MINUS       shift, and go to state 72
    MULT        shift, and go to state 73
    DIV         shift, and go to state 74
    AND         shift, and go to state 75
    OR          shift, and go to state 76
    DMINUS      shift, and go to state 77
    DPLUS       shift, and go to state 78
    RELOP       shift, and go to state 79
    DOT         shift, and go to state 80
    ARROW       shift, and go to state 81
    EQ_ASSIGN   shift, and go to state 82

    $default  reduce using rule 66 (expr_stmt)


State 43

   89 expr: term .

    $default  reduce using rule 89 (expr)


State 44

   91 term: CONST .

    $default  reduce using rule 91 (term)


State 45

   18 function: T . IDENTIFIER LPAREN params RPAREN LBRACE statements RBRACE
   19         | T . IDENTIFIER LPAREN RPAREN LBRACE statements RBRACE
   38 declaration: T . declare_id_list

    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    MULT        shift, and go to state 83
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 84
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23

    ARRAY            go to state 85
    ASSIGN_stmt      go to state 86
    declare_id_list  go to state 87
    expr             go to state 88
    term             go to state 43
    CONST            go to state 44


State 46

   47 while_stmt: WHILE LPAREN . expr RPAREN statement
   48           | WHILE LPAREN . expr RPAREN LBRACE statements RBRACE

    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23

    expr   go to state 89
    term   go to state 43
    CONST  go to state 44


State 47

   49 for_stmt: FOR LPAREN . ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN statement
   50         | FOR LPAREN . declaration SEMICOLON expr SEMICOLON expr RPAREN statement
   51         | FOR LPAREN . ASSIGN_stmt SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE
   52         | FOR LPAREN . declaration SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE
   53         | FOR LPAREN . SEMICOLON expr SEMICOLON expr RPAREN statement
   54         | FOR LPAREN . SEMICOLON expr SEMICOLON expr RPAREN LBRACE statements RBRACE

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_BOOL      shift, and go to state 3
    VOID        shift, and go to state 4
    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    the_CONST   shift, and go to state 14
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23
    SEMICOLON   shift, and go to state 90

    ASSIGN_stmt  go to state 91
    declaration  go to state 92
    expr         go to state 88
    term         go to state 43
    CONST        go to state 44
    T            go to state 93


State 48

   55 matched_if_stmt: IF LPAREN . expr RPAREN matched_stmt ELSE matched_stmt
   56                | IF LPAREN . expr RPAREN LBRACE statements RBRACE ELSE matched_stmt
   57                | IF LPAREN . expr RPAREN matched_stmt ELSE LBRACE statements RBRACE
   58                | IF LPAREN . expr RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
   59 unmatched_if_stmt: IF LPAREN . expr RPAREN matched_stmt ELSE unmatched_stmt
   60                  | IF LPAREN . expr RPAREN LBRACE statements RBRACE ELSE unmatched_stmt
   61                  | IF LPAREN . expr RPAREN statement
   62                  | IF LPAREN . expr RPAREN LBRACE statements RBRACE

    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23

    expr   go to state 94
    term   go to state 43
    CONST  go to state 44


State 49

   37 RETURN_stmt: RETURN expr .
   69 expr: expr . MOD expr
   70     | expr . PLUS expr
   71     | expr . MINUS expr
   72     | expr . MULT expr
   73     | expr . DIV expr
   74     | expr . AND expr
   75     | expr . OR expr
   76     | expr . RELOP expr
   77     | expr . DOT IDENTIFIER
   78     | expr . ARROW IDENTIFIER
   79     | expr . LBRACKET expr RBRACKET
   80     | expr . LPAREN RPAREN
   81     | expr . LPAREN expr_list RPAREN
   83     | expr . DPLUS
   85     | expr . DMINUS

    LPAREN    shift, and go to state 68
    LBRACKET  shift, and go to state 69
    MOD       shift, and go to state 70
    PLUS      shift, and go to state 71
    MINUS     shift, and go to state 72
    MULT      shift, and go to state 73
    DIV       shift, and go to state 74
    AND       shift, and go to state 75
    OR        shift, and go to state 76
    DMINUS    shift, and go to state 77
    DPLUS     shift, and go to state 78
    RELOP     shift, and go to state 79
    DOT       shift, and go to state 80
    ARROW     shift, and go to state 81

    $default  reduce using rule 37 (RETURN_stmt)


State 50

   63 printf_stmt: PRINTF LPAREN . expr_list RPAREN
   64            | PRINTF LPAREN . STRING COMMA expr_list RPAREN

    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 95

    expr       go to state 96
    term       go to state 43
    CONST      go to state 44
    expr_list  go to state 97


State 51

   65 scanf_stmt: SCANF LPAREN . STRING COMMA scanf_id_list RPAREN

    STRING  shift, and go to state 98


State 52

   23 struct_decl: STRUCT IDENTIFIER . LBRACE members RBRACE SEMICOLON
   24            | STRUCT IDENTIFIER . LBRACE members RBRACE IDENTIFIER_list SEMICOLON

    LBRACE  shift, and go to state 99


State 53

   39 declaration: the_CONST T . must_init_declare_id_list

    TRUE        shift, and go to state 11
    FALSE       shift, and go to state 12
    LPAREN      shift, and go to state 15
    MINUS       shift, and go to state 16
    NOT         shift, and go to state 17
    DMINUS      shift, and go to state 18
    DPLUS       shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    INTEGER     shift, and go to state 21
    CHAR        shift, and go to state 22
    STRING      shift, and go to state 23

    ASSIGN_stmt                go to state 100
    must_init_declare_id_list  go to state 101
    expr                       go to state 88
    term                       go to state 43
    CONST                      go to state 44


State 54

   68 expr_stmt: expr_stmt . COMMA expr_stmt
   88 expr: LPAREN expr_stmt . RPAREN

    RPAREN  shift, and go to state 102
    COMMA   shift, and go to state 65


State 55

   69 expr: expr . MOD expr
   70     | expr . PLUS expr
   71     | expr . MINUS expr
   72     | expr . MULT expr
   73     | expr . DIV expr
   74     | expr . AND expr
   75     | expr . OR expr
   76     | expr . RELOP expr
   77     | expr . DOT IDENTIFIER
   78     | expr . ARROW IDENTIFIER
   79     | expr . LBRACKET expr RBRACKET
   80     | expr . LPAREN RPAREN
   81     | expr . LPAREN expr_list RPAREN
   83     | expr . DPLUS
   85     | expr . DMINUS
   87     | MINUS expr .

    LPAREN    shift, and go to state 68
    LBRACKET  shift, and go to state 69
    DMINUS    shift, and go to state 77
    DPLUS     shift, and go to state 78
    DOT       shift, and go to state 80
    ARROW     shift, and go to state 81

    $default  reduce using rule 87 (expr)


State 56

   69 expr: expr . MOD expr
   70     | expr . PLUS expr
   71     | expr . MINUS expr
   72     | expr . MULT expr
   73     | expr . DIV expr
   74     | expr . AND expr
   75     | expr . OR expr
   76     | expr . RELOP expr
   77     | expr . DOT IDENTIFIER
   78     | expr . ARROW IDENTIFIER
   79     | expr . LBRACKET expr RBRACKET
   80     | expr . LPAREN RPAREN
   81     | expr . LPAREN expr_list RPAREN
   83     | expr . DPLUS
   85     | expr . DMINUS
   86     | NOT expr .

    LPAREN    shift, and go to state 68
    LBRACKET  shift, and go to state 69
    DMINUS    shift, and go to state 77
    DPLUS     shift, and go to state 78
    DOT       shift, and go to state 80
    ARROW     shift, and go to state 81

    $default  reduce using rule 86 (expr)


State 57

   69 expr: expr . MOD expr
   70     | expr . PLUS expr
   71     | expr . MINUS expr
   72     | expr . MULT expr
   73     | expr . DIV expr
   74     | expr . AND expr
   75     | expr . OR expr
   76     | expr . RELOP expr
   77     | expr . DOT IDENTIFIER
   78     | expr . ARROW IDENTIFIER
   79     | expr . LBRACKET expr RBRACKET
   80     | expr . LPAREN RPAREN
   81     | expr . LPAREN expr_list RPAREN
   83     | expr . DPLUS
   84     | DMINUS expr .
   85     | expr . DMINUS

    LPAREN    shift, and go to state 68
    LBRACKET  shift, and go to state 69
    DMINUS    shift, and go to state 77
    DPLUS     shift, and go to state 78
    DOT       shift, and go to state 80
    ARROW     shift, and go to state 81

    $default  reduce using rule 84 (expr)


State 58

   69 expr: expr . MOD expr
   70     | expr . PLUS expr
   71     | expr . MINUS expr
   72     | expr . MULT expr
   73     | expr . DIV expr
   74     | expr . AND expr
   75     | expr . OR expr
   76     | expr . RELOP expr
   77     | expr . DOT IDENTIFIER
   78     | expr . ARROW IDENTIFIER
   79     | expr . LBRACKET expr RBRACKET
   80     | expr . LPAREN RPAREN
   81     | expr . LPAREN expr_list RPAREN
   82     | DPLUS expr .
   83     | expr . DPLUS
   85     | expr . DMINUS

    LPAREN    shift, and go to state 68
    LBRACKET  shift, and go to state 69
    DMINUS    shift, and go to state 77
    DPLUS     shift, and go to state 78
    DOT       shift, and go to state 80
    ARROW     shift, and go to state 81

    $default  reduce using rule 82 (expr)


State 59

    0 $accept: program $end .

    $default  accept


State 60

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


State 61

   11 matched_stmt: RETURN_stmt SEMICOLON .

    $default  reduce using rule 11 (matched_stmt)


State 62

   12 matched_stmt: declaration SEMICOLON .

    $default  reduce using rule 12 (matched_stmt)


State 63

   13 matched_stmt: printf_stmt SEMICOLON .

    $default  reduce using rule 13 (matched_stmt)


State 64

   14 matched_stmt: scanf_stmt SEMICOLON .

    $default  reduce using rule 14 (matched_stmt)


State 65

   68 expr_stmt: expr_stmt COMMA . expr_stmt
